@@ -1,4 +1,3 @@
 %\PUBLIC {-//W3C//DTD SVG 1.1//EN} {svgpgf.xmt}
 %\NAME{svg} {svgpgf.xmt}
 
-\NAMESPACE{http://www.w3.org/2000/svg} {svgpgf.xmt}
