@@ -1,24 +1,15 @@
-
-\makeatletter
-\let\orig@end=\@@end
-
 \documentclass{article}
 
-\usepackage{tikz}
-
-
+\usepackage{pgfsvg}
 
 \begin{document}
 
 Huhu...
 
-
-\def\xmlfile{svgtest.xml}
-
-\let\@@end\relax
-\def\test{{\input{xmltex.tex}}}
-\test
-\let\@@end\orig@end
+\xmlinclude{svgtest.xml}
 foo...
+\xmlinclude{rect01.xml}
+
+%\xmlinclude{svgtest.xml}
 
 \end{document}
