@@ -4,27 +4,27 @@
 	  "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
 
 <svg xmlns="http://www.w3.org/2000/svg"
-     width="1000"
-     height="600"
-     viewBox="0 0 5 5">
+     width="200"
+     height="200"
+     viewBox="0 0.5 5 5" preserveAspectRatio="none">
   <rect id="black_stripe"
         fill="#000"
         width="5"
         height="1"/>
   <rect id="gray_i"
         fill="#484"
-        width="5"
-        height="1" y="0.5"/>
+        width="6"
+        height="1" y="2"/>
   <rect id="gray_ii"
         fill="#888"
-        width="5"
-        height="1" y="2"/>
+        width="3"
+        height="1" y="3"/>
   <rect id="gray_iii"
         fill="#ccc"
-        width="5"
-        height="1" y="3"/>
+        width="2"
+        height="1" y="4"/>
   <rect id="white"
         fill="#fff"
         width="5"
-        height="1" y="4"/>
+        height="1" y="5"/>
 </svg>
