@@ -1637,6 +1637,7 @@
 \def\tikz@extra@preaction#1{%
   {%
     \pgfsys@beginscope%
+      \setbox\tikz@figbox=\box\voidb@x%
       \path[#1];% do extra path
       \pgfsyssoftpath@setcurrentpath\tikz@actions@path% restore
       \tikz@restorepathsize%
@@ -1647,6 +1648,7 @@
 \def\tikz@extra@postaction#1{%
   {%
     \pgfsys@beginscope%
+      \setbox\tikz@figbox=\box\voidb@x%
       \tikz@restorepathsize%
       \path[#1]\pgfextra{\pgfsyssoftpath@setcurrentpath\tikz@actions@path};% do extra path
       \pgf@resetpathsizes%
@@ -2566,6 +2568,8 @@
       \let\tikz@afternodepathoptions=\pgfutil@empty%
       \let\tikz@transform=\pgfutil@empty%
       \let\tikz@mode=\pgfutil@empty%
+      \let\tikz@preactions=\pgfutil@empty%
+      \let\tikz@postactions=\pgfutil@empty%
       \def\tikz@node@at{\pgfqpoint{\the\tikz@lastx}{\the\tikz@lasty}}%
       \iftikz@node@is@a@label%
       \else%
