@@ -11,7 +11,7 @@
 
 % Default driver:
 \ifx\pgfsysdriver\@undefined
-  \def\pgfsysdriver{pgfsys-\Gin@driver}
+  \edef\pgfsysdriver{pgfsys-\Gin@driver}
 \fi
 
 
