@@ -116,7 +116,6 @@
   }%
 }%
 
-
 \def\pgf@sys@atbeginpage#1{\AtBeginDvi{#1}}
 \AtBeginDocument{% hyperref hack
   \ifx\HyPL@EveryPage\@undefined%
